Made some minor changes to the homepage. Fixed the overlapping text issue.

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -17,39 +17,26 @@
     background-color: #568ea6;
 }
 
-.left-content{
-    flex-grow: 1;
-    height: 100%;
-}
-
 .middle-content{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: flex-start;
-    flex-grow: 1;
+    justify-content: center;
     height: 100%;
-    justify-content: flex-end;
+    width: 50%;
+    padding-left: 100px;
 }
 .right-content{
-    flex-grow: 1;
+    width: 50%;
     height: 100%;
-    align-items:flex-end;
-}
-
-.home-greeting-container{
-    display: flex;
-    flex-direction: column;
-    padding-top: 26%;
-    padding-right: 30px;
 }
 
 .lucy-container{
     font-size: clamp(35px, 11vw, 90px);
-    padding: none;
+    line-height: normal;
   }
 
 .lucy{
-    height: 95px;
     width: 100%;
     font-family:'Ubuntu', sans-serif;
     color: white;
@@ -60,6 +47,7 @@
     font-family: 'Montserrat', sans-serif;
     font-size: clamp(15px, 4vw, 25px);
     line-height: normal;
+    margin-top: 5%;
   }
 
   .software-engineer{
@@ -70,10 +58,8 @@
       color: white;
   }
   
-  .contact-button-container{
-      padding-top: 10%;
-  }
   .button1{
+      margin-top: 5%;
       padding: 20px 35px;
       background-color: #E1C0C0;
       color: #305f72;
@@ -93,8 +79,8 @@
 
 .lucy-image{
     padding-top: 10%;
-    width: 500px;
-    height: 500px;
+    width: 70%;
+    height: 70%;
     display: flex;
 }
 
@@ -107,4 +93,16 @@ img{
     .middle-content{
        padding-top: 20%;
     }
+
+   .row{
+       flex-direction: column;
+   }
+
+   .home-greeting-container{
+       padding-top: none;
+   }
+
+   .message-container{
+       padding-top: 10%;
+   }
   }
