--- a/src/app/pages/projects/projects.component.css
+++ b/src/app/pages/projects/projects.component.css
@@ -2,7 +2,7 @@
     /*Needs to be long enough to not show white space
     between it and footer */
     width: 100%;
-    height: 800px;
+    height: 100vh;
     display: flex;
     flex-direction: column;
    }
@@ -18,6 +18,7 @@
    .content-container{
     width: 100%;
     display: flex;
+    height: 100%;
     justify-content: center;
    }
 
